# Encrypt_project/password_encryption/swagger/user_password.yaml
@@ -23,13 +23,13 @@ schemes:
 - "https"
 - "http"
 paths:
-  /user:
+  /user/:
     get:
       tags:
       - "users"
       summary: "list all user and password"
       description: ""
-      operationId: Users.getUserDetails
+      operationId: password_encryption.api.password_handle.Users
       produces:
       - "application/xml"
       - "application/json"
